# cave-bench

./: .gitignore  AAPL_20240101_20241231.csv  CONTRIBUTING.md  README.md  aap.py  env.example  models.toml  pyproject.toml  run_blackjack.py  run_data_analysis.py  run_function_calling.py  run_game.py  run_robot.py  run_smart_home.py  run_stateful.py  runner.py  utils.py
adapters/: __init__.py  cave_agent_adapter.py  litellm_adapter.py
adapters/models/: anthropic.py  gemini.py
benchmarks/chemistry_lab/: chemistry_lab.py  chemistry_lab_benchmarks.json
benchmarks/function_calling/: benchmarks.json  ecommerce_order_processing.json  ecommerce_tools.py  financial_analysis_2.json  financial_analysis_2_tools.py  financial_analysis_tools.py  financial_portfolio_analysis.json  flight_booking.json  flight_booking_tools.py  inventory_management.json  inventory_management_tools.py  order_processing.json  order_processing_tools.py  recipe_planning.json  recipe_planning_tools.py  smart_building.json  smart_building_tools.py  smart_farm_management.json  smart_farm_tools.py  smart_home_automation.json  smart_home_tools.py  (+4 more)
cave-agent/: README.md  pyproject.toml
core/: __init__.py  agent.py  evaluator.py  prompts.py  tracker.py  types.py  validation.py
models/: __init__.py  anthropic.py
scripts/: data_analysis.py  domain.py  function_calling.py  matrix_cumulative_fc.py  precision.py  smart_home.py  stateful.py  stock_benchmark.py  stock_benchmark_codeact.py  stock_benchmark_fc.py
tests/: __init__.py  test_agent.py  test_evaluator.py  test_types.py  test_validation.py
(+190 files in other folders)
