[project]
name = "cave-bench"
version = "0.1.0"
description = "A comprehensive benchmarking framework for evaluating CaveAgent's tool-calling and code-generation capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "cave-agent[all] @ file:///${PROJECT_ROOT}/cave-agent",
]
